# Semantic_Segmentatin_Benchmark

./: LICENSE  README.md  pyproject.toml
semantic_segmentation/: __init__.py  cli.py  infer.py  metrics.py  train.py
semantic_segmentation/models/: deeplabv3.py  fcn8s.py  hybrid_u.py  segnet.py
